<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Cross Trainer</string>
    <string name="trainer">Trainer Academia</string>
    <string name="txt_intro1">Um aplicativo exclusivo para alunos da Trainer Academia</string>
    <string name="txt_intro2">Faça exercícios melhorando a saúde e o condicionamento físico</string>
    <string name="txt_intro3">Desafie-se com os circuitos e receba medalhas pelas suas conquistas!</string>
    <string name="txt_intro4">O seu maior projeto deve ser você!</string>
    <string name="txt_intro4_title">Evolução pessoal</string>
    <string name="quero_ser">Quero ser aluno</string>
    <string name="cadastrar_cross">Cadastrar no Cross Trainer</string>
    <string name="tenho_conta">Já tenho conta</string>
    <string name="para_aluno">Cadastro exclusivo para alunos Trainer</string>
    <string name="acessar">Acessar</string>
    <string name="nome">Nome</string>
    <string name="mail">E-mail</string>
    <string name="cel">Celular</string>
    <string name="senha">Senha</string>
    <string name="senha2">Confirmar Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="termos">Termos de uso</string>
    <string name="page_desafiante">Desafiante</string>
    <string name="page_atividades">Avatar</string>
    <string name="page_conquistas">Conquistas</string>
    <string name="page_relatorios">Relatórios</string>
    <string name="page_ranking">Ranking</string>
    <string name="page_desafios">Desafios</string>
    <string name="finalizar">Finalizar treino</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_account">Conta</string>
    <string name="updateUser">Meu Perfil</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="txt_desafiante">Acredite, vale a pena lutar para ser melhor.</string>
    <string name="txt_ranking1">Desafia-se e veja sua colocação dentro dos circuitos.</string>
    <string name="txt_ranking2">Participe da primeira Arena Cross trainer!</string>
    <string name="txt_desafio1">Escolha seu desafio.</string>
    <string name="txt_desafio2">O primeiro passo da vitória é começar!</string>
    <string name="start">Iniciar</string>
    <string name="finish">Finalizar</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Salvar</string>
    <string name="back">Voltar</string>
    <string name="carregando">carregando</string>

    <string-array name="intencidades">
        <item>100%</item>
        <item>80%</item>
        <item>60%</item>
    </string-array>
    <string-array name="pesos">
        <item>100%</item>
        <item>50%</item>
    </string-array>
    <string-array name="intervalos">
        <item>Sem intervalo</item>
        <item> 15 segundos"</item>
        <item> 30 segundos"</item>
        <item> 45 segundos"</item>
        <item> 60 segundos"</item>
    </string-array>
    <string-array name="circuitos">
        <item>Impactus</item>
        <item>Maximus</item>
        <item>Invictus</item>
        <item>Spartacus</item>
    </string-array>
    <string-array name="sex">
        <item></item>
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>

</resources>