<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_atividades"
        android:icon="@drawable/ic_clock_24"
        android:title="@string/page_atividades" />

    <item
        android:id="@+id/navigation_conquistas"
        android:icon="@drawable/ic_trophy_24"
        android:title="@string/page_conquistas" />

    <item
        android:id="@+id/navigation_relatorios"
        android:icon="@drawable/ic_chart_24"
        android:title="@string/page_relatorios" />

    <item
        android:id="@+id/navigation_ranking"
        android:icon="@drawable/ic_flag_24"
        android:title="@string/page_ranking" />

    <item
        android:id="@+id/navigation_desafios"
        android:icon="@drawable/ic_user_circle_24"
        android:title="@string/page_desafios" />

</menu>